fix: update ShowAllTaskHandler apigit status
