# controllers/task.go
@@ -90,24 +90,35 @@ func ShowATaskHandler(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "Bearer JWT"
+// @Param page query string false "page"
+// @Param size query string false "size"
+// @Param order query string false "order"
 // @Success 200 {object} _ResponseShowAllTask
 // @Router /task [get]
 func ShowAllTaskHandler(c *gin.Context) {
-	// 1. 从JWT解析中获取userId
+	// 1. 解析参数
+	p, err := getPageInfo(c)
+	if err != nil {
+		zap.L().Error("[package: controllers] [func: ShowAllTaskHandler] [getPageInfo(c)] failed, ", zap.Error(err))
+		ResponseError(c, CodeInvalidParam)
+		return
+	}
+
+	// 2. 从JWT解析中获取userId
 	userId, err := getCurrentUserID(c)
 	if err != nil {
 		ResponseError(c, CodeNeedLogin)
 		return
 	}
 
-	// 2. 业务逻辑
-	taskList, err := logic.GetTaskListByUserId(userId)
+	// 3. 业务逻辑
+	taskList, err := logic.GetTaskListByUserId(userId, p)
 	if err != nil {
 		zap.L().Error("[package: controllers] [func: ShowAllTaskHandler] [logic.GetTaskListByUserId(userId)] failed, ", zap.Error(err))
 		ResponseError(c, CodeServerBusy)
 		return
 	}
 
-	// 3. 返回响应
+	// 4. 返回响应
 	ResponseSuccess(c, taskList)
 }
